# microservices-grpc-go-python

./: README.md  ecommerce.proto
catalog/: .env.example  main.go
catalog/ecommerce/: ecommerce.pb.go
discount/: ecommerce_pb2.py  pyproject.toml  server.py
keys/: cert.pem  private.key
